--- a/gb/21/3/1/n12781550.md
+++ b/gb/21/3/1/n12781550.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/oeocpl316/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oeocpl316/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/oeocpl316/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oeocpl316/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/oeocpl316/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oeocpl316/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/oeocpl316/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oeocpl316/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/oeocpl316/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oeocpl316/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/oeocpl316/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oeocpl316/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/oeocpl316/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oeocpl316/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/oeocpl316/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oeocpl316/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/oeocpl316/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oeocpl316/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/oeocpl316/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oeocpl316/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/oeocpl316/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/oeocpl316/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/oeocpl316/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/oeocpl316/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/oeocpl316/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/oeocpl316/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/oeocpl316/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/oeocpl316/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/oeocpl316/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/oeocpl316/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/oeocpl316/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/oeocpl316/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/oeocpl316/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/oeocpl316/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/oeocpl316/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/oeocpl316/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/oeocpl316/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/oeocpl316/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/oeocpl316/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/oeocpl316/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/oeocpl316/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/oeocpl316/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/oeocpl316/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/oeocpl316/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/oeocpl316/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/oeocpl316/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/oeocpl316/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>旧金山市议员呼吁 疫情期间取消公交车票价</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/03/GettyImages-1217248430-600x400.jpg" />
 <h6>旧金山市议员迪恩．普雷斯顿（Dean Preston）呼吁，在疫情流行期间，旧金山交通局（SFMTA）应该让市民免费搭乘公交车。图为民众搭乘Muni公车。(Justin Sullivan/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2021年03月01日讯】（大纪元记者陈柏州综合报导）近日，旧金山市议员迪恩．普雷斯顿（Dean Preston）呼吁，在疫情流行期间，<ahref="https://github.com/oeocpl316/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1%E4%BA%A4%E9%80%9A%E5%B1%80.md#1">旧金山交通局</a>（SFMTA）应该让市民免费搭乘<ahref="https://github.com/oeocpl316/djy/blob/master/gb/tag/%E5%85%AC%E4%BA%A4%E8%BD%A6.md#1">公交车</a>；交通倡导者也认为，交通局应使用联邦纾困金，来弥补大幅减少的<ahref="https://github.com/oeocpl316/djy/blob/master/gb/tag/%E7%A5%A8%E4%BB%B7.md#1">票价</a>收入。对此，当局回应，此举恐将导致赤字大增。</p>
-<p>普雷斯顿在一份声明中说：“在疫情期间，提供民众免费搭乘<ahref="https://github.com/oeocpl316/djy/blob/master/gb/tag/%E5%85%AC%E4%BA%A4%E8%BD%A6.md#1">公交车</a>，是恢复乘客量的关键一步，并帮助受到经济冲击的旧金山市民渡过难关。”</p>
-<p>此前，<ahref="https://github.com/oeocpl316/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1%E4%BA%A4%E9%80%9A%E5%B1%80.md#1">旧金山交通局</a>宣布，只要民众持疫苗接种许可，即可免费乘坐公交车往返疫苗接种站。普雷斯顿对此表示肯定，声称此举可以减少市民在交通方面的阻碍、促进公共交通使用，也能为民众省下交通费。</p>
-<p>但普雷斯顿指出，当局的政策，惠及接种疫苗的民众，但这些人仅占少数。不少医护人员、患者搭乘公交车前往医院，民众也会搭乘公交车前往<ahref="https://github.com/oeocpl316/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/oeocpl316/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>，COVID-19）检测站、杂货店和药局等，在这艰难的时期，他们还是得支付交通费。</p>
+	<p>【大纪元2021年03月01日讯】（大纪元记者陈柏州综合报导）近日，旧金山市议员迪恩．普雷斯顿（Dean Preston）呼吁，在疫情流行期间，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1%E4%BA%A4%E9%80%9A%E5%B1%80.md#1">旧金山交通局</a>（SFMTA）应该让市民免费搭乘<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%85%AC%E4%BA%A4%E8%BD%A6.md#1">公交车</a>；交通倡导者也认为，交通局应使用联邦纾困金，来弥补大幅减少的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%A5%A8%E4%BB%B7.md#1">票价</a>收入。对此，当局回应，此举恐将导致赤字大增。</p>
+<p>普雷斯顿在一份声明中说：“在疫情期间，提供民众免费搭乘<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%85%AC%E4%BA%A4%E8%BD%A6.md#1">公交车</a>，是恢复乘客量的关键一步，并帮助受到经济冲击的旧金山市民渡过难关。”</p>
+<p>此前，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1%E4%BA%A4%E9%80%9A%E5%B1%80.md#1">旧金山交通局</a>宣布，只要民众持疫苗接种许可，即可免费乘坐公交车往返疫苗接种站。普雷斯顿对此表示肯定，声称此举可以减少市民在交通方面的阻碍、促进公共交通使用，也能为民众省下交通费。</p>
+<p>但普雷斯顿指出，当局的政策，惠及接种疫苗的民众，但这些人仅占少数。不少医护人员、患者搭乘公交车前往医院，民众也会搭乘公交车前往<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>，COVID-19）检测站、杂货店和药局等，在这艰难的时期，他们还是得支付交通费。</p>
 <p>目前公交车乘客量比一般水平低60%以上，普雷斯顿补充，如果提供免费搭乘服务，不仅减轻很多市民的经济负担，也能提高更多市民搭乘的意愿。</p>
-<h2>交通倡导者：用联邦纾困金减免<ahref="https://github.com/oeocpl316/djy/blob/master/gb/tag/%E7%A5%A8%E4%BB%B7.md#1">票价</a></h2>
+<h2>交通倡导者：用联邦纾困金减免<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%A5%A8%E4%BB%B7.md#1">票价</a></h2>
 <p>过去有许多交通倡导者，一直呼吁当局应让民众免费搭乘公交车，对于普雷斯顿的建议，他们也表示支持。</p>
 <p>SOMA社区行动网（South of Market Community Action Network）的PJ Eugenio说：“免费搭乘公交车，将有助于我们的经济重回正轨，也能提高乘客量。”“出于公平和公正的考虑，我们敦促旧金山交通局，在疫情期间立即减免票价。”</p>
 <p>2月初，佛雷斯诺（Fresno）市议会批准一项类似的提案，该提案包括取消公交车票价；计划在短期内使用联邦纾困金，来弥补损失的成本；在今年晚些时候，确定一个长期的融资计划。</p>
@@ -26,7 +26,7 @@
 <p>此外，不少交通倡导者认为，在这个经济严峻的时期，减免收费的正确的作法，并以旧金山国际机场（San Francisco International Airport）和旧金山港为例，他们为商业租户提供租金减免等财政支持。</p>
 <p>阿文说：“像旧金山这样一个进步的城市，应该通过减免公交车票价，来避免湾区的失业率大幅上升，而不是对那些无法支付票价的市民，进行125美元的罚款。”</p>
 <p>不过，当局表示，已针对最弱势的市民，提供大幅折扣和免费的票价选择，老人、残疾人士和面临经济困境的市民，可以以很低的费用搭乘公交车。◇</p>
-<p>注：新冠状病毒，也称<ahref="https://github.com/oeocpl316/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>病毒，大纪元认为叫“<ahref="https://github.com/oeocpl316/djy/blob/master/gb/tag/%e4%b8%ad%e5%85%b1%e7%97%85%e6%af%92.md#1">中共病毒</a>”更准确。因该病毒来自中共统治下的中国，更因中共掩盖疫情导致病毒向全世界扩散，并造成全球大流行。</p>
+<p>注：新冠状病毒，也称<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>病毒，大纪元认为叫“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%e4%b8%ad%e5%85%b1%e7%97%85%e6%af%92.md#1">中共病毒</a>”更准确。因该病毒来自中共统治下的中国，更因中共掩盖疫情导致病毒向全世界扩散，并造成全球大流行。</p>
 <p><ahref="https://sf.epochtimes.com/donate/"><img class="aligncenter size-large wp-image-12584681" src="https://i.epochtimes.com/assets/uploads/2020/11/donate-SF-600x179px-C-600x179.jpg" alt="" width="600" b="179" /></a><br />
 <ahref="https://sf.epochtimes.com/subscribe/"><img class="aligncenter size-large wp-image-12584702" src="https://i.epochtimes.com/assets/uploads/2020/11/Subscribe-SF_600x179px-600x179.jpg" alt="" width="600" b="179" /></a><br />
 <ahref="https://www.give1car.com/"><img class="aligncenter size-large wp-image-12584887" src="https://i.epochtimes.com/assets/uploads/2020/11/car-donation-NTD-600x70.png" alt="" width="600" b="70" /></a><br />
@@ -40,41 +40,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/oeocpl316/djy/blob/master/gb/20/12/23/n12639462.md#1">联邦纾困含140亿交通经费 湾区仍寻求长期来源</a></li>
-<li><a href="https://github.com/oeocpl316/djy/blob/master/gb/20/12/26/n12646035.md#1">旧金山交通局发布年度报告 2020年举步维艰</a></li>
-<li><a href="https://github.com/oeocpl316/djy/blob/master/gb/21/1/28/n12717121.md#1">旧金山2022年拟延长交通销售税调涨</a></li>
-<li><a href="https://github.com/oeocpl316/djy/blob/master/gb/21/2/20/n12763831.md#1">旧金山下周二起 可免费乘公交接受疫苗接种</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/12/23/n12639462.md#1">联邦纾困含140亿交通经费 湾区仍寻求长期来源</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/12/26/n12646035.md#1">旧金山交通局发布年度报告 2020年举步维艰</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/1/28/n12717121.md#1">旧金山2022年拟延长交通销售税调涨</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/2/20/n12763831.md#1">旧金山下周二起 可免费乘公交接受疫苗接种</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/oeocpl316/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/16/n9847533.md#1" target="_blank">共产主义受难者纪念碑与去共化浪潮</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/21/n11602447.md#1" target="_blank">他们为我们的生活带来光明（4）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/7/n10959110.md#1" target="_blank">冯八飞：请问候劳鹤——真正的知识分子爱因斯坦</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/22/n11340563.md#1" target="_blank">美国务卿：对严重侵犯宗教自由者追责</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/oeocpl316/djy/blob/master/gb/21/2/22/n12767168.md#1">辛丑八卦2021年两岸国运</a></li>
-<li><a href="https://github.com/oeocpl316/djy/blob/master/gb/21/2/21/n12765804.md#1">预言中的大瘟疫和中国变局</a></li>
-<li><a href="https://github.com/oeocpl316/djy/blob/master/gb/21/2/26/n12776678.md#1">《圣经》专家：龙确实存在 曾与人类共存</a></li>
-<li><a href="https://github.com/oeocpl316/djy/blob/master/gb/20/12/30/n12654622.md#1">【命理】他才胜于德 如何走上自我毁灭之路</a></li>
-<li><a href="https://github.com/oeocpl316/djy/blob/master/gb/21/2/26/n12777426.md#1">《转法轮》提及的史前文明案例：海底建筑</a></li>
-<li><a href="https://github.com/oeocpl316/djy/blob/master/gb/21/2/28/n12779667.md#1">【拍案惊奇】翠字惹怒习近平 武统从凤梨开始？</a></li>
-<li><a href="https://github.com/oeocpl316/djy/blob/master/gb/21/3/1/n12781147.md#1">【思想领袖】蓬佩奥：中共称霸 世界反击须脱钩</a></li>
-<li><a href="https://github.com/oeocpl316/djy/blob/master/gb/21/2/26/n12777629.md#1">【时事军事】失去机翼的F-15 以色列空军传奇</a></li>
-<li><a href="https://github.com/oeocpl316/djy/blob/master/gb/21/2/27/n12778947.md#1">吴孟达病逝 周星驰、刘德华作出回应</a></li>
-<li><a href="https://github.com/oeocpl316/djy/blob/master/gb/21/2/26/n12778089.md#1">专家分析：中共为何打算取消购汇限制</a></li>
-<li><a href="https://github.com/oeocpl316/djy/blob/master/gb/21/2/26/n12777597.md#1">【财商天下】台积电遇致命伤 全球缺芯加剧？</a></li>
-<li><a href="https://github.com/oeocpl316/djy/blob/master/gb/21/2/26/n12775969.md#1">胎儿保不住 赵小侨与刘亮佐心痛：16周宝宝胎停</a></li>
-<li><a href="https://github.com/oeocpl316/djy/blob/master/gb/21/2/27/n12779516.md#1">杜汶泽狠酸中共 呼吁港人挺台湾凤梨</a></li>
-<li><a href="https://github.com/oeocpl316/djy/blob/master/gb/21/2/26/n12777907.md#1">谢娜元宵节剪头发 疑为生二胎做准备</a></li>
-<li><a href="https://github.com/oeocpl316/djy/blob/master/gb/21/2/26/n12777755.md#1">范冰冰贴角色合集庆元宵 风格搞怪等待复出？</a></li>
-<li><a href="https://github.com/oeocpl316/djy/blob/master/gb/21/2/26/n12776726.md#1">《神隐少女》真人版 桥本环奈上白石萌音双主演</a></li>
-<li><a href="https://github.com/oeocpl316/djy/blob/master/gb/21/2/27/n12779046.md#1">吴孟达病逝 肝癌一发现多是晚期夺命快 3招预防</a></li>
-<li><a href="https://github.com/oeocpl316/djy/blob/master/gb/21/2/26/n12776459.md#1">车在水下、船在桥上 荷兰水桥颠覆你的想像</a></li>
-<li><a href="https://github.com/oeocpl316/djy/blob/master/gb/21/2/26/n12777493.md#1">姿势看出你的性格？改变姿势 20秒缓解疼痛</a></li>
-<li><a href="https://github.com/oeocpl316/djy/blob/master/gb/21/2/26/n12777393.md#1">千万别生吃！7种蔬菜必须煮熟食用 避免吃毒素</a></li>
-<li><a href="https://github.com/oeocpl316/djy/blob/master/gb/21/2/26/n12776678.md#1">《圣经》专家：龙确实存在 曾与人类共存</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690054.md#1">【车评】迷你快车 2022 MINI Cooper S</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">唐瑞讲故事｜朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677259.md#1">5种抗炎又给人饱腹感的零食</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/oeocpl316/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/oeocpl316/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/3/1/n12781550.htm">旧金山市议员呼吁 疫情期间取消公交车票价</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/3/1/n12781550.htm">旧金山市议员呼吁 疫情期间取消公交车票价</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/oeocpl316/djy/blob/master/gb/21/3/1/n12781550.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/oeocpl316/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeocpl316/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/oeocpl316/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/oeocpl316/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/oeocpl316/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeocpl316/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/oeocpl316/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeocpl316/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/oeocpl316/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeocpl316/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/oeocpl316/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeocpl316/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/oeocpl316/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeocpl316/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/oeocpl316/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeocpl316/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/oeocpl316/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeocpl316/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/oeocpl316/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeocpl316/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/oeocpl316/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeocpl316/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/oeocpl316/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeocpl316/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/oeocpl316/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeocpl316/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/oeocpl316/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeocpl316/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/oeocpl316/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeocpl316/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/oeocpl316/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeocpl316/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/oeocpl316/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeocpl316/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/oeocpl316/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeocpl316/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/oeocpl316/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeocpl316/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/oeocpl316/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeocpl316/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/oeocpl316/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeocpl316/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/oeocpl316/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeocpl316/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/oeocpl316/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeocpl316/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/oeocpl316/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeocpl316/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/21/3/1/n12781550.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
